# socket_com

./: .gitignore  README.rst  ansible.cfg  deploy_server.yml  inventory.ini  pyproject.toml  requirements.txt
.run/: Run Client (no-encrypt).run.xml  Run Client.run.xml  Run Key Generator.run.xml  Run Scanner JSONServer.run.xml  Run Scanner Registered (Thirdparty Software).run.xml  Run Scanner System.run.xml  Run Server (no-encrypt).run.xml  Run Server.run.xml
socket_com/: client.py  key_generator.py  scanner.py  server.py
socket_com/utils/: logger_conifg.py
templates/: socket_server.service.j2
