[project]
name = "socket_com"
version = "0.0.1"
description = "Modul PSA Woche 2"
requires-python = ">=3.10"
dependencies = [
    "cffi==2.0.0",
    "colorama==0.4.6",
    "cryptography==46.0.6",
    "pycparser==3.0",
    "psa_utils @ git+ssh://git@github.com/HF-Python-Scripting-Automation/psa-utils.git",
]

[tool.setuptools]
packages = ["socket_com"]